# NOVA_problemsolving

./: 3sum_closest.c  4sum.c  Automobile.cpp  BMI.c  MaintenanceTask.cpp  MaintenanceTask.h  WaterConsumption.c  chef.c  contains_duplicate.c  coursecount.c  instant_noodle.c  lenght_of_lastword.c  median.c  missing_number.c  oneful_pair.c  onefulpair.c  palindrome.c  reverse_a_number.c  tempertureconvertor.c  to_Fahrenheit.c
AutomobileMaintenanceLibrary/: Automobile.h  MaintenanceLibrary.cpp  main.cpp
NOVA_2/: Prime_check.c  duplicates.c  goodturn.c
NOVA_4(EXCEPTION HANDLING)/10_Fleet/: fleet.cpp  fleet.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/11_DiagnosticTool/: diagnosticTool.cpp  diagnosticTool.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/12_dataLogger/: dataLogger.cpp  dataLogger.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/13_routePlanner/: main.cpp  routeParameters.h  routePlanner.h  vehicles.h
NOVA_4(EXCEPTION HANDLING)/1_ARRAY/: array.cpp  array.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/2_SWAP/: main.cpp  swap.cpp  swap.h
NOVA_4(EXCEPTION HANDLING)/3_AreaOfShapes/: area.cpp  area.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/4_CHARARRAY/: char.cpp  char.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/5_MatrixOperations/: main.cpp  matrix.cpp  matrix.h
NOVA_4(EXCEPTION HANDLING)/6_ELECTRICVEHICLE/: ev.cpp  ev.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/7_vehicle/: main.cpp  vehicle.cpp  vehicle.h
NOVA_4(EXCEPTION HANDLING)/8_battery/: battery.cpp  battery.h  main.cpp
NOVA_4(EXCEPTION HANDLING)/9_transport/: main.cpp  transport.cpp  transport.h
automobilemaintenace/: CMakeLists.txt  MaintenanceLibrary.h  UPDATED_README.md  test_main.cpp
nova_3/10/: fleet.cpp  fleet.h  main.cpp
nova_3/9/: main.cpp  transport.cpp  transport.h
